spade-tests/src/snapshots/spade_tests__ports_integration__assigning_ports_to_ports_is_disallowed.snap
---
source: spade-tests/src/ports_integration.rs
---
entity not_allowed(a: ~& (&bool, &bool), b: (&bool, &bool)) -> bool {
    set a = b;
    true
}


error: The syntax for inverted ports has changed from ~ to inv
  ┌─ testinput:1:23
  │
1 │ entity not_allowed(a: ~& (&bool, &bool), b: (&bool, &bool)) -> bool {
  │                       ^ ~ cannot be used in a type
  │
  = Consider using inv
  │
1 │ entity not_allowed(a: inv & (&bool, &bool), b: (&bool, &bool)) -> bool {
  │                       ~~~~
